--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="display: flex;
+    flex-direction: column;
+    height: 100%;"></div>
     <div id="modal"></div>
     <!--
       This HTML file is a template.
